# jujuchat

./: README.md  pyproject.toml
jujuchat/: common.py  configurator.py  tokenizer.py
rustbpe/: Cargo.toml
rustbpe/src/: lib.rs
tests/: test_common.py  test_config.py  test_tokenizer.py
